test/org/midica/testfiles/failing/eff-flow-remainder-2.midica
INCLUDE inc/instruments.midica


0: vol.wait().wait().set(50).wait-for-me

